# rs-zip

./: .gitattributes  Cargo.toml  README.md  browser.js  index.d.ts  index.js  package.json  rs-zip.wasi-browser.js  rs-zip.wasi.cjs
.github/workflows/: CI.yml
__test__/: index.spec.ts
benchmark/: bench-large.ts  bench.ts
src/: lib.rs
