
[package]
authors = ["zhouxinyong <samberxyz@gmail.com>"]
edition = "2024"
name    = "rs-zip"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
glob        = "0.3"
napi        = "3.0.0"
napi-derive = "3.0.0"
walkdir     = "2.3.4"
zip         = "6.0.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
